--- a/app.properties
+++ b/app.properties
@@ -1,2 +1,2 @@
-frontend.url = https://example.com
+frontend.url = https://davidjnr2.github.io/CV19-estimator/
 backend.rest = https://jsonplaceholder.typicode.com/todos
