--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "lint": "eslint ./src/"
   },
   "dependencies": {
-    "on-covid-19": "^0.1.3"
+    "on-covid-19": "^0.1.3",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "babel-jest": "^25.2.0",
-    "jest": "^25.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.1"
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "jest": "^25.2.0"
   },
   "browserslist": [
     "last 1 Chrome versions"
